<resources>
    <string name="app_name">加密工具</string>

    <string name="title_section1">密码</string>
    <string name="title_section2">视频</string>
    <string name="title_section3">图片</string>

    <string name="add">添加</string>
    <string name="save">保存</string>
    <string name="name_">项目名：</string>
    <string name="username_">用户名：</string>
    <string name="password_">密码：</string>
    <string name="tip_">备注：</string>
    <string name="see">看一看</string>
    <string name="hide">隐藏</string>
    <string name="repeat_password_">重复密码：</string>
    <string name="OK">确认</string>
    <string name="Cancel">取消</string>
    <string name="set_password">设置密码</string>
    <string name="create_time_">创建时间：</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="edit_password">编辑密码</string>
    <string name="select_all">全选</string>
    <string name="back">返回</string>
    <string name="search">搜索</string>
    <string name="options">选项</string>
    <string name="search1">项目名、用户名、备注</string>
    <string name="search2">项目名</string>
    <string name="search3">用户名</string>
    <string name="search4">备注</string>
    <string name="search5">密码</string>
    <string name="search6">全部</string>
    <string name="sort">排序</string>
    <string name="sort1">时间</string>
    <string name="sort2">项目名称</string>
    <string name="sort3">用户名</string>
    <string name="sort4">密码</string>
    <string name="import_">导入</string>
    <string name="export">导出</string>
    <string name="data_open_password_">数据文件打开密码：</string>
    <string name="data_open_password_ensure">确认数据文件打开密码：</string>
    <string name="choose_data_file_">选择数据文件：</string>
    <string name="choose_data_path_">选择数据文件路径：</string>
    <string name="data_file_name_">数据文件名称：</string>
    <string name="ellipsis">…</string>
    <string name="deleteFileAfterImport">是否在导入之后删除文件</string>
    <string name="fileName">文件名</string>
    <string name="back_last_level">（返回上一级）</string>
    <string name="choose_data_file">选择数据文件</string>
    <string name="choose_data_path">选择数据文件路径</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="test">测试</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_password_add">添加密码</string>

    <string name="hello_world">Hello world!</string>
    <string name="login">登录</string>
    <string name="title_activity_password_import">导入密码文件</string>
    <string name="title_activity_password_export">导出密码库</string>
    <string name="select_img_dir">选择相册</string>
    <string name="title_activity_select_image_dir">SelectImageDirActivity</string>
    <string name="send">发送</string>
    <string name="image_and_video">图片和视频</string>
    <string name="all_images">所有图片</string>
    <string name="all_videos">所有视频</string>
    <string name="loading___">正在加载&#8230;</string>
    <string name="no_image_and_video">没有图片或者视频</string>
    <string name="no_images">没有图片</string>
    <string name="no_sd_card">没有SD卡</string>
    <string name="video_decryption_failure">视频解密失败</string>
    <string name="image_decryption_failure">图片解密失败</string>
    <string name="remove">移除</string>
    <string name="info">属性</string>
    <string name="file">文件</string>
    <string name="location">位置</string>
    <string name="size">大小</string>
    <string name="duration">长度</string>
    <string name="include">包含</string>
    <string name="all_size">总大小</string>
    <string name="modify_login_password">修改登录密码</string>
    <string name="old_password_">原密码：</string>
    <string name="new_password_">新密码：</string>
    <string name="modify_login_password_ing">正在修改登录密码&#8230;</string>
    <string name="PressAgainToEncodeAndToExitTheProgram">再按一次加密并退出程序</string>
    <string name="last_time_">最后修改时间：</string>
    <string name="needStoragePermission">需要SD卡权限，否则无法继续运行。</string>
    <string name="remove_to">移除文件到</string>
    <string-array name="remove_file_options">
        <item>(导入文件时)文件所在的原始目录</item>
        <item>选择一个文件夹</item>
    </string-array>

</resources>
