<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/password_menu_back"
        android:icon="@drawable/back"
        android:orderInCategory="1"
        android:title="@string/back"
        app:showAsAction="always" />
    <item
        android:id="@+id/password_menu_select_all"
        android:icon="@drawable/select_all"
        android:orderInCategory="2"
        android:title="@string/select_all"
        app:showAsAction="always" />

    <item
        android:id="@+id/password_menu_delete"
        android:icon="@drawable/trash"
        android:orderInCategory="99"
        android:title="@string/delete"
        app:showAsAction="always" />

    <item
        android:id="@+id/password_menu_search"
        android:icon="@drawable/search"
        android:orderInCategory="98"
        android:title="@string/search"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/password_menu_search_1"
                android:orderInCategory="1"
                android:title="@string/search1" />
            <item
                android:id="@+id/password_menu_search_2"
                android:orderInCategory="2"
                android:title="@string/search2" />
            <item
                android:id="@+id/password_menu_search_3"
                android:orderInCategory="3"
                android:title="@string/search3" />
            <item
                android:id="@+id/password_menu_search_4"
                android:orderInCategory="4"
                android:title="@string/search4" />
            <item
                android:id="@+id/password_menu_search_5"
                android:orderInCategory="5"
                android:title="@string/search5" />
            <item
                android:id="@+id/password_menu_search_6"
                android:orderInCategory="6"
                android:title="@string/search6" />

        </menu>
    </item>

    <item
        android:id="@+id/password_menu_sort"
        android:icon="@drawable/sort"
        android:orderInCategory="99"
        android:title="@string/sort"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/password_menu_sort_1"
                android:orderInCategory="1"
                android:title="@string/sort1" />
            <item
                android:id="@+id/password_menu_sort_2"
                android:orderInCategory="2"
                android:title="@string/sort2" />
            <item
                android:id="@+id/password_menu_sort_3"
                android:orderInCategory="3"
                android:title="@string/sort3" />
            <item
                android:id="@+id/password_menu_sort_4"
                android:orderInCategory="4"
                android:title="@string/sort4" />
        </menu>
    </item>

    <item
        android:id="@+id/password_menu_add"
        android:icon="@drawable/add"
        android:orderInCategory="100"
        android:title="@string/add"
        app:showAsAction="always" />
    <item
        android:id="@+id/password_menu_import"
        android:icon="@drawable/import_"
        android:orderInCategory="101"
        android:title="@string/import_"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/password_menu_export"
        android:icon="@drawable/export"
        android:orderInCategory="101"
        android:title="@string/export"
        app:showAsAction="ifRoom|withText" />

</menu>
