<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/video_image_menu_back"
        android:icon="@drawable/back"
        android:orderInCategory="1"
        android:title="@string/back"
        app:showAsAction="always" />
    <item
        android:id="@+id/video_image_menu_select_all"
        android:icon="@drawable/select_all"
        android:orderInCategory="2"
        android:title="@string/select_all"
        app:showAsAction="always" />
    <item
        android:id="@+id/video_menu_info"
        android:icon="@drawable/info"
        android:orderInCategory="3"
        android:title="@string/info"
        app:showAsAction="always" />

    <item
        android:id="@+id/video_menu_remove"
        android:icon="@drawable/remove"
        android:orderInCategory="4"
        android:title="@string/remove"
        app:showAsAction="always" />

    <item
        android:id="@+id/video_menu_delete"
        android:icon="@drawable/trash"
        android:orderInCategory="99"
        android:title="@string/delete"
        app:showAsAction="ifRoom|withText" />


    <item
        android:id="@+id/video_image_menu_add"
        android:icon="@drawable/add"
        android:orderInCategory="100"
        android:title="@string/add"
        app:showAsAction="always" />

</menu>
