<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.edu.ustc.software.hanyizhao.encryptiontool.PasswordImportActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dip" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_open_password_" />

        <EditText
            android:id="@+id/import_data_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_data_file_" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/import_data_file_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/ellipsis" />

            <EditText
                android:id="@+id/import_data_file"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@id/import_data_file_button"
                android:editable="false"
                android:hint="@string/fileName"
                android:singleLine="true"/>
        </RelativeLayout>

        <CheckBox
            android:id="@+id/import_data_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deleteFileAfterImport"
            android:checked="false"
            android:layout_gravity="right" />


    </LinearLayout>

</ScrollView>
