<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.edu.ustc.software.hanyizhao.encryptiontool.PasswordExportActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dip" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_open_password_" />

        <EditText
            android:id="@+id/export_data_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_open_password_ensure" />

        <EditText
            android:id="@+id/export_data_password_ensure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_file_name_" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TableRow>

                <EditText
                    android:id="@+id/export_data_name"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text=".secbak2" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_data_path_" />
            </TableRow>

            <TableRow>

                <EditText
                    android:id="@+id/export_data_file"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:editable="false"
                    android:singleLine="true"/>

                <Button
                    android:id="@+id/export_data_file_button"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="..."
                    android:layout_gravity="bottom"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>

</ScrollView>
